# camera-ozobot-detection

./: .gitignore  README.md  pyproject.toml
launch/: ozobot_bringup.launch.py
motion/: README.md  __init__.py  __main__.py  g1_motion.py  lekiwi_motion.py
ozobot_bands/: __init__.py  calibration.py  color_library.py  colors.py  detector.py  frame_source.py  synthetic.py  visualization.py
scripts/: calibrate.py  combinations.py  demo.py  highlight.py  identify_band.py  test_synthetic.py
tests/: test_color_library.py  test_combinations.py  test_detector.py  test_synthetic.py  test_visualization.py
vision/: README.md  __init__.py  actions.fr.json  calibration.py  color_library.py  controller.py  detector.py  missions.py  pipeline.py  run.py  tts.py
vision/tests/: test_missions.py  test_pipeline.py
